实现了保存翻页信息

--- a/project/client/src/app/theme/components/pagination/pagination.custom.html
+++ b/project/client/src/app/theme/components/pagination/pagination.custom.html
@@ -26,7 +26,7 @@
             <a ng-click="selectPage(numPages)">尾页</a>
         </li>
         <li>
-            <a ><span>共{{numPages}}页</span></a>
+            <a><span>共{{numPages}}页/{{totalItemCount}}条</span></a>
         </li>
         <!--<li>-->
             <!--<span>从 {{stItemsByPage*(currentPage-1)+1}} 到 {{stItemsByPage*(currentPage)}} /共 {{stItemsByPage*numPages}} 条数据</span>-->
