搜索 翻页 等功能全部实现

--- a/project/client/src/app/pages/customers/detail.html
+++ b/project/client/src/app/pages/customers/detail.html
@@ -294,6 +294,11 @@
 
                 </uib-tabset>
             </div>
+            <div class="row">
+                <button class="btn btn-primary" ng-click="vm.back()">
+                    返回
+                </button>
+            </div>
 
         </div>
 
