--- a/project/client/src/app/pages/customers/index.html
+++ b/project/client/src/app/pages/customers/index.html
@@ -17,7 +17,16 @@
               {{multipleItem.title}}
             </ui-select-choices>
           </ui-select>
+
+
         </div>
+
+      </div>
+      <div class="col-md-2">
+        <button type="button" ng-click="vm.matchRule()"
+                class="btn  btn-primary">
+          匹配
+        </button>
       </div>
 
     </div>
@@ -31,12 +40,12 @@
       <thead>
       <tr>
         <th colspan="7">
-          <input st-search="match" placeholder="global search" class="input-sm form-control" type="search"/>
+          <input st-search="match" placeholder="全文检索" class="input-sm form-control" type="search"/>
         </th>
 
       </tr>
-      <tr>
-        <th>*</th>
+      <tr class="sortable">
+        <th class="table-id">#</th>
         <th>姓名</th>
         <th>性别</th>
         <th>八字</th>
@@ -48,7 +57,7 @@
       </thead>
       <tbody>
       <tr ng-repeat="item in vm.customers">
-        <td>{{ $index+1 }}</td>
+        <td class="table-id">{{ $index+1 }}</td>
         <td>
         <a href ng-click="vm.detail(item)">
         {{ item.name }}
