--- a/project/client/src/app/pages/customers/index.html
+++ b/project/client/src/app/pages/customers/index.html
@@ -2,34 +2,34 @@
 
 <div class="panel panel-default with-scroll">
   <div class="panel-body">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <ui-select multiple ng-model="vm.multipleSelectItems"
-                     ng-disabled="false"
-                     search-enabled="true"
-                     append-to-body="true"
-                     class="form-control">
-            <ui-select-match placeholder="规则">
-              {{$item.title}}
-            </ui-select-match>
-            <ui-select-choices repeat="multipleItem in vm.rules | filter: $select.search">
-              {{multipleItem.title}}
-            </ui-select-choices>
-          </ui-select>
+    <!--<div class="row">-->
+      <!--<div class="col-md-6">-->
+        <!--<div class="form-group">-->
+          <!--<ui-select multiple ng-model="vm.multipleSelectItems"-->
+                     <!--ng-disabled="false"-->
+                     <!--search-enabled="true"-->
+                     <!--append-to-body="true"-->
+                     <!--class="form-control">-->
+            <!--<ui-select-match placeholder="规则">-->
+              <!--{{$item.title}}-->
+            <!--</ui-select-match>-->
+            <!--<ui-select-choices repeat="multipleItem in vm.rules | filter: $select.search">-->
+              <!--{{multipleItem.title}}-->
+            <!--</ui-select-choices>-->
+          <!--</ui-select>-->
 
 
-        </div>
+        <!--</div>-->
 
-      </div>
-      <div class="col-md-2">
-        <button type="button" ng-click="vm.matchRule()"
-                class="btn  btn-primary">
-          匹配
-        </button>
-      </div>
+      <!--</div>-->
+      <!--<div class="col-md-2">-->
+        <!--<button type="button" ng-click="vm.matchRule()"-->
+                <!--class="btn  btn-primary">-->
+          <!--匹配-->
+        <!--</button>-->
+      <!--</div>-->
 
-    </div>
+    <!--</div>-->
 
     <table
             st-persist="customersTable"
@@ -102,7 +102,7 @@
       <tfoot>
       <tr>
         <td colspan="7" class="text-center">
-          <div st-pagination="" st-items-by-page="10" ></div>
+          <div st-pagination="" st-items-by-page="vm.itemsByPage" ></div>
         </td>
       </tr>
       </tfoot>
