修改默认排序以及显示标签

--- a/project/client/src/app/pages/customers/index.html
+++ b/project/client/src/app/pages/customers/index.html
@@ -50,6 +50,7 @@
         <th>性别</th>
         <th>八字</th>
         <th>出生日期</th>
+        <th>标签</th>
         <th>操作</th>
 
       </tr>
@@ -71,6 +72,10 @@
         </td>
         <td>
         {{ item.birth }}
+        </td>
+
+        <td>
+          {{ item.label }}
         </td>
 
         <td>
