--- a/project/client/src/app/pages/customers/detail.html
+++ b/project/client/src/app/pages/customers/detail.html
@@ -282,19 +282,31 @@
 
                     </uib-tab>
 
-
-
                     <uib-tab heading="常用信息">
-                        <!-- <div json-viewer="vm.importantInfo"></div> -->
-                        <json-formatter json="vm.importantInfo" open="1"></json-formatter>
+
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <span class="input-group-addon">空亡</span>
+                                    <input class="form-control"  ng-model="vm.countLiuJiaKongWang">
+                                    <span class="input-group-btn">
+                                            <button class="btn btn-default" ng-click="vm.getLiuJiaKongWang(vm.countLiuJiaKongWang)" type="button">计算</button>
+                                    </span>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <json-formatter json="vm.importantInfo" open="1"></json-formatter>
+                        </div>
+
                     </uib-tab>
                     <uib-tab heading="详情描述">
-                        <button class="btn btn-info" ng-click="vm.updateDescription()">更新</button>
                          <textarea class="form-control" ng-model="vm.customer.description" style="height:auto;" rows="10">
 
                         </textarea>
+                        <button class="btn btn-info" ng-click="vm.updateDescription()">更新</button>
 
-                        <!--<p>{{vm.customer.description}}</p>-->
                     </uib-tab>
 
                 </uib-tabset>
