--- a/project/client/src/app/pages/customers/detail.html
+++ b/project/client/src/app/pages/customers/detail.html
@@ -73,6 +73,10 @@
                         <span class="text-primary">{{vm.niannayin}}</span>
                     </p>
 
+                    <p>
+                        <span class="text-info">{{vm.getXingZhi(vm.nianzhu)}}</span>
+                    </p>
+
                 </div>
                 <div class="col-xs-3 col-md-1">
                     <p>月柱</p>
@@ -86,6 +90,11 @@
                     <p>
                         <span class="text-primary">{{vm.yuenayin}}</span>
                     </p>
+
+                    <p>
+                        <span class="text-info">{{vm.getXingZhi(vm.yuezhu)}}</span>
+                    </p>
+
                 </div>
                 <div class="col-xs-3 col-md-1">
                     <p>日柱</p>
@@ -99,6 +108,9 @@
                     <p>
                         <span class="text-primary">{{vm.rinayin}}</span>
                     </p>
+                    <p>
+                        <span class="text-info">{{vm.getXingZhi(vm.rizhu)}}</span>
+                    </p>
                 </div>
                 <div class="col-xs-3 col-md-1">
                     <p>时柱</p>
@@ -110,6 +122,9 @@
                     </h3>
                     <p>
                         <span class="text-primary">{{vm.shinayin}}</span>
+                    </p>
+                    <p>
+                        <span class="text-info">{{vm.getXingZhi(vm.shizhu)}}</span>
                     </p>
                 </div>
 
@@ -125,6 +140,9 @@
                     <p>
                         <span class="text-primary">{{vm.dayunnayin}}</span>
                     </p>
+                    <p>
+                        <span class="text-info">{{vm.getXingZhi(vm.dayunzhu)}}</span>
+                    </p>
                 </div>
                 <div class="col-xs-3 col-md-1">
                     <p>流年</p>
@@ -137,6 +155,9 @@
 
                     <p>
                         <span class="text-primary">{{vm.liuniannayin}}</span>
+                    </p>
+                    <p>
+                        <span class="text-info">{{vm.getXingZhi(vm.liunianzhu)}}</span>
                     </p>
                 </div>
 
@@ -152,6 +173,9 @@
                     <p>
                         <span class="text-primary">{{vm.xingniannayin}}</span>
                     </p>
+                    <p>
+                        <span class="text-info">{{vm.getXingZhi(vm.xingnianzhu)}}</span>
+                    </p>
                 </div>
 
 
@@ -166,6 +190,9 @@
 
                     <p>
                         <span class="text-primary">{{vm.bazi.tainayin}}</span>
+                    </p>
+                    <p>
+                        <span class="text-info">{{vm.getXingZhi(vm.taizhu)}}</span>
                     </p>
                 </div>
                 <div class="col-xs-3 col-md-1">
