--- a/project/phone/mobile/app/layout/Layout.html
+++ b/project/phone/mobile/app/layout/Layout.html
@@ -11,6 +11,12 @@ navigation history that also transitions its views in and out.
     </ion-tab>
 
     <!-- Account Tab -->
+    <ion-tab title="信息" icon="ion-android-person" ui-sref="app.information">
+        <ion-nav-view name="tab-information"></ion-nav-view>
+    </ion-tab>
+
+
+    <!-- Account Tab -->
     <ion-tab title="我的" icon="ion-android-person" ui-sref="app.account">
         <ion-nav-view name="tab-account"></ion-nav-view>
     </ion-tab>
