--- a/project/client/src/app/pages/rules/modify.html
+++ b/project/client/src/app/pages/rules/modify.html
@@ -32,6 +32,21 @@
             </textarea>
         </div>
 
+        <div class="input-group">
+            <ui-select ng-model="vm.rule.type"
+                       class="btn-group bootstrap-select form-control"
+            >
+                <ui-select-match  placeholder="类型">
+                    <span> {{$select.selected.title}}</span>
+                </ui-select-match>
+                <ui-select-choices
+                        repeat="item in vm.typeList"
+                >
+                    <span ng-bind-html="item.title"></span>
+                </ui-select-choices>
+            </ui-select>
+        </div>
+
         <div class="form-group">
             <div ng-if="vm.id===0">
                 <button class="btn btn-primary"
