--- a/project/client/src/app/pages/rules/modify.html
+++ b/project/client/src/app/pages/rules/modify.html
@@ -17,6 +17,24 @@
         </div>
 
         <div class="form-group">
+            <label class="control-label">类型</label>
+            <div class="input-group">
+                <ui-select ng-model="vm.typeSelected"
+                           class="btn-group bootstrap-select form-control"
+                >
+                    <ui-select-match >
+                        <span> {{$select.selected.title}}</span>
+                    </ui-select-match>
+                    <ui-select-choices
+                            repeat="item in vm.typeList"
+                    >
+                        <span ng-bind-html="item.title"></span>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+        </div>
+
+        <div class="form-group">
             <label class="control-label">描述</label>
             <input type="text" class="form-control"  placeholder=""
                    ng-model="vm.rule.description"
@@ -32,20 +50,7 @@
             </textarea>
         </div>
 
-        <div class="input-group">
-            <ui-select ng-model="vm.rule.type"
-                       class="btn-group bootstrap-select form-control"
-            >
-                <ui-select-match  placeholder="类型">
-                    <span> {{$select.selected.title}}</span>
-                </ui-select-match>
-                <ui-select-choices
-                        repeat="item in vm.typeList"
-                >
-                    <span ng-bind-html="item.title"></span>
-                </ui-select-choices>
-            </ui-select>
-        </div>
+
 
         <div class="form-group">
             <div ng-if="vm.id===0">
